syntax = "proto3";

package account;

option go_package = "github.com/startcodextech/goauth/internal/application/cqrs/commands/account";

message CreateUser {
    string name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
    string facebook_id = 5;
    string google_id = 6;
    string apple_id = 7;
    string microsoft_id = 8;
}